[project]
name = "atqo"
description = "Async task queue orchestrator with resource-aware scheduling"
dynamic = ["version"]
authors = [{name = "Endre Márk Borza", email = "endremborza@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tblib"]

[project.optional-dependencies]
fancy = ["tqdm"]

[project.urls]
Homepage = "https://github.com/endremborza/atqo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "atqo/__init__.py"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-s --timeout=30 --timeout-method=thread"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-timeout>=2.3.1",
    "pytest-cov>=5.0.0",
    "tqdm>=4.66.0",
]
